--- a/5×5/index.html
+++ b/5×5/index.html
@@ -1,6 +1,9 @@
 <script type="text/javascript" src = "coffee-script.js"></script>
 <script type="text/javascript" src = "OWL2.js"></script>
 <script type="text/javascript" src = "jquery-1.5.2.min.js"></script>
+<script type="text/javascript" src = "/socket.io/socket.io.js"></script>
+<!-- 服务器端的Socket.io类库能够自动为他自己的客户端类库提供服务 -->
+
 <script type="text/coffeescirpt" src = "Grid.coffee"></script>
 <script type="text/coffeescirpt" src = "Dictionary.coffee"></script>
 <script type="text/coffeescirpt" src = "Player.coffee"></script>
